Workflows: yarn instead of npm

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,6 +7,6 @@ jobs:
       - name: Get repository code
         uses: actions/checkout@v4
       - name: Install node modules
-        run: npm ci
+        run: yarn
       - name: Test app
-        run: npm run test
+        run: yarn run test
