--- a/workflows-samples/deployment.yml
+++ b/workflows-samples/deployment.yml
@@ -1,7 +1,7 @@
 name: Deploy React App
 on: push
 jobs:
-  Deploy:
+  Test:
     runs-on: ubuntu-latest
     steps:
       - name: Get repository code
@@ -10,8 +10,24 @@ jobs:
         run: yarn
       - name: Test app
         run: yarn run test
+  Lint:
+    runs-on: ubuntu-latest
+    needs: Test
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v4
+      - name: Install node modules
+        run: yarn
       - name: Lint app
         run: yarn run lint
+  Build:
+    runs-on: ubuntu-latest
+    needs: Lint
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v4
+      - name: Install node modules
+        run: yarn
       - name: Build app
         run: yarn run build
       - name: Deploy
