--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,8 +1,8 @@
 name: Print pull request context
-on: workflow_dispatch
+on: push
 jobs:
   Print:
     runs-on: ubuntu-latest
     steps:
       - name: Print context
-        run: echo "${{ github }}"
+        run: echo "${{ toJSON(github) }}"
