--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,7 +5,7 @@ on:
       - 'main'
       # - '**.js'
     paths-ignore:
-      - './github/workflows/*' # не запускать воркфлоу при обновлении самих воркфлоу
+      - '.github/workflows/*' # не запускать воркфлоу при обновлении самих воркфлоу
 jobs:
   Deploy:
     runs-on: ubuntu-latest
