--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,23 +1,48 @@
 name: Deploy React App
-on: 
-  push:
-    branches:
-      - 'main'
-      # - '**.js'
-    paths-ignore:
-      - '.github/workflows/*' # не запускать воркфлоу при обновлении самих воркфлоу
+on: push
 jobs:
-  Deploy:
+  Test:
     runs-on: ubuntu-latest
     steps:
       - name: Get repository code
         uses: actions/checkout@v4
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/yarn.lock') }}
       - name: Install node modules
         run: yarn
       - name: Test app
         run: yarn run test
+  Lint:
+    runs-on: ubuntu-latest
+    needs: Test
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v4
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/yarn.lock') }}
+      - name: Install node modules
+        run: yarn
       - name: Lint app
         run: yarn run lint
+  Build:
+    runs-on: ubuntu-latest
+    needs: Lint
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v4
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/yarn.lock') }}
+      - name: Install node modules
+        run: yarn
       - name: Build app
         run: yarn run build
       - name: Deploy
