--- a/workflows-samples/matrix.yml
+++ b/workflows-samples/matrix.yml
@@ -22,6 +22,7 @@ jobs:
         run: yarn run lint
   Build:
     needs: Lint
+    # continue-on-error: true
     strategy: 
       matrix:
         node-version: [16, 18]
