--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build React App
+name: Build & Deploy React App
 on: [push, workflow_dispatch]
 jobs:
   Build:
@@ -14,4 +14,12 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           path: build
+          name: my-react-app-build
+  Deploy:
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get build folder
+        uses: actions/download-artifact@v3
+        with:
           name: my-react-app-build
