--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
           known_hosts: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-      # - name: Adding Known Hosts
-      #   run: ssh-keyscan -H ${{ secrets.SERVER_SSH_PRIVATE_KEY }} >> ~/.ssh/known_hosts
+      - name: Adding Known Hosts
+        run: ssh-keyscan 213.226.126.241 >> ~/.ssh/known_hosts
       - name: Get repository code
         uses: actions/checkout@v4
       - name: Install node modules
