--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -14,14 +14,15 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-          known_hosts: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-      - name: Adding Known Hosts
-        run: ssh-keyscan 213.226.126.241 >> ~/.ssh/known_hosts
+          # known_hosts: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+          known_hosts: unnecessary
+      # - name: Adding Known Hosts
+      #   run: ssh-keyscan 213.226.126.241 >> ~/.ssh/known_hosts
       - name: Get repository code
         uses: actions/checkout@v4
       - name: Install node modules
         run: yarn
       - name: Make build
         run: yarn build
-      - name: Deploy to server
-        run: rsync ./build/ root@213.226.126.241:/var/www/html/
+      - name: Deploy to server (rsync over SSH)
+        run: rsync -r ./build/ root@213.226.126.241:/var/www/html/
