--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -16,6 +16,7 @@ jobs:
           key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
           # known_hosts: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
           known_hosts: unnecessary
+      - run: echo "" >> ~/.ssh/known_hosts
       # - name: Adding Known Hosts
       #   run: ssh-keyscan 213.226.126.241 >> ~/.ssh/known_hosts
       - name: Get repository code
