--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -16,14 +16,16 @@ jobs:
           key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
           # known_hosts: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
           known_hosts: unnecessary
-      - run: echo "" >> ~/.ssh/known_hosts
-      # - name: Adding Known Hosts
-      #   run: ssh-keyscan 213.226.126.241 >> ~/.ssh/known_hosts
+      
+      - name: Adding Known Hosts
+        run: ssh-keyscan -p 22 -H 213.226.126.241 >> ~/.ssh/known_hosts
       - name: Get repository code
         uses: actions/checkout@v4
-      - name: Install node modules
-        run: yarn
-      - name: Make build
-        run: yarn build
+      # - name: Install node modules
+      #   run: yarn
+      # - name: Make build
+      #   run: yarn build
+      # - name: Deploy to server (rsync over SSH)
+      #   run: rsync -r ./build/ root@213.226.126.241:/var/www/html/
       - name: Deploy to server (rsync over SSH)
-        run: rsync -r ./build/ root@213.226.126.241:/var/www/html/
+        run: rsync -r ./src/ root@213.226.126.241:/var/www/html/
